dev : minor updates